--- a/src/data/main.yml
+++ b/src/data/main.yml
@@ -16,7 +16,7 @@ home:
   greeting: Hi!
   nameIntro: My name is
   name: Atte Tuomisto.
-  description: I'm a full stack developer based in Finland, specialized in building web-based applications, APIs and everything in between. 
+  description: I'm a Full-Stack Developer based in Finland, specialized in building web-based applications, APIs and everything in between. 
   next: Read more about me here →
 
 # expertise
