--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-feather": "^2.0.9",
     "react-helmet": "^6.1.0",
     "react-tsparticles": "^1.18.11",
-    "styled-components": "^5.2.1",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "eslint": "^7.14.0",
